# VoxVR

./: CMakeLists.txt  CMakeSettings.json
include/: Application.h  BitMap.h  GLSLShader.h  RenderableObject.h  VoxelWorld.h  tinyfiledialogs.h  vrutil.h
src/: Application.cpp  BitMap.cpp  GLSLShader.cpp  Grid.cpp  RenderableObject.cpp  VoxelWorld.cpp  main.cpp  tinyfiledialogs.c  vrutil.cpp
